# discord-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.sh  release.toml  run-sniff.sh
.cargo/: config.toml
.github/workflows/: rust-ci.yml
examples/: activity.rs  lobby.rs  overlay.rs  repl.rs  rich_presence.rs  shared._rs  shared.rs
examples-shared/: Cargo.toml
examples-shared/src/: lib.rs
examples/activity/: Cargo.toml
examples/activity/examples/: activity.rs
examples/lobby/: Cargo.toml
examples/lobby/examples/: lobby.rs
examples/overlay/: Cargo.toml
examples/overlay/examples/: overlay.rs
examples/relationships/: Cargo.toml
examples/relationships/examples/: relationships.rs
examples/repl/: Cargo.toml
examples/repl/examples/: repl.rs
sdk/: CHANGELOG.md  Cargo.toml  README.md  copy.sh  release.toml
sdk/src/: activity.rs  error.rs  handler.rs  io.rs  lib.rs  lobby.rs  overlay.rs  proto.rs  registration.rs  relations.rs  types.rs  user.rs  util.rs  voice.rs
sdk/src/activity/: events.rs
sdk/src/handler/: handlers.rs  wheel.rs
sdk/src/lobby/: events.rs  search.rs  state.rs
sdk/src/overlay/: events.rs
sdk/src/proto/: command.rs  event.rs
sdk/src/registration/: empty.rs  linux.rs  windows.rs
sdk/src/relations/: events.rs  state.rs
sdk/src/snapshots/: discord_sdk__activity__test__serde.snap  discord_sdk__relations__test__deserializes.snap  discord_sdk__relations__test__serde.snap
sdk/src/user/: events.rs
sdk/src/voice/: events.rs  state.rs
sdk/tests/: activity.rs  lobby.rs
sniff/: Cargo.toml  README.md  hook-discord.sh  run-sniff.sh
sniff/src/: main.rs
src/: activity.rs  error.rs  handler.rs  io.rs  lib.rs  lobby.rs  overlay.rs  proto.rs  rich_presence.rs  types.rs  user.rs  util.rs
src/activity/: events.rs
src/lobby/: state.rs
src/proto/: command.rs  event.rs
src/registration/: linux.rs  mac.rs  windows.rs
tests/: activity.rs  lobby.rs  shared.rs
